temporarily removed darkmode support

--- a/index.html
+++ b/index.html
@@ -10,56 +10,14 @@
     <title>Oke's Portfolio</title>
     <link rel="icon" href="images/Favicon_Logo.png" type="image/png"> <!--Favicon-->
   </head>
-<!-- 
-                                             !YPPP55PPPY~                                            
-                                          7G5!:     .:7PG!                                          
-                                         5#~            !&J                                         
-                                        7@^              ~@!                                        
-                                        5#   7?.    :?!  .&J                                        
-                                        !@~ Y@G.    :G@J !@~                                        
-                                         ?#B@J        Y@G#7                                         
-                                         ^&@B?~:.  .:~J#@&^                                         
-                                        7@#^:7Y555555J7.~#@!                                        
-                                       Y@P.              :G@J                                       
-                                     .G@Y                  Y@P.                                     
-                                    ^#@7                    7@#^                                    
-                                   7@#^                      ^#&!                                   
-                                  Y@#7~!!!!!!!!!!!!!!!!!!!!!!~7&@J                                  
-                                .P@B5?!!!!!!!!!!!!!!!!!!!!!!!!?5#@P.                                
-                               ^#@G5!                          75B@B^                               
-                              7&&PY^                            ~YG@&!                              
-                             Y@#PJ:                              :YP&@J                             
-                           .P@B5?.                                .?5#@P.                           
-                          ^B@G5!                                    75B@B:                          
-                         7&@PY^                                      ~YG@&!                         
-                        J@&PJ:                                        :YP&@J                        
-                      .P@B5?.                                          .?5#@5.                      
-                     ^#@G5!                                              75B@B:                     
-                    !@#7YY:                                              :5J7&&!                    
-                   J@G: .J5^                                            ~5J. :B@?                   
-                 .P@Y     ?5!                                          757    .5@5.                 
-                ^#@7       !5?.                                      .J5~       ?@B:                
-               !@&~         ^5Y:                                    :YY:         !&&~               
-              J@G:           :J5^                                  ~5J.           :B@?              
-            .P@5               ?5!                                757              .5@5             
-     ^7JYYJJB@Y                 !5?.                            .?5~                 5@BJJYYJ7^     
-  :YG5?~^:J@#J5P7                ^5Y:                          :YY^                7P5J&@J:^~?5GY:  
- 7#J:     75:  ^PB:               .JY^........................~5J.               :BP^  ^57     :J#7 
-!@!           ^^^G#~^^^^^^^^^^^^^^^~5GPPPPPPPPPPPPPPPPPPPPPPPPGY~^^^^^^^^^^^^^^^~#G^^^           !@!
-GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG#@GGB5            BG
-5#               ~@~                                                            ~@~               #5
-:#5             :#5                                                              5#:             5#:
- .5B?:        ^YB?                                                                ?BY^        :?B5. 
-   ^J55YJ??JY557.                                                                  .755YJ??JY55J^   
-      .^~!!~^.                                                                        .^~!!~^.       
-                                    Website by Oke-Oghene Amuwha-->
+<!--Website by Oke-Oghene Amuwha-->
 
   <!--Body-->
   <body>
     <!--Header-->
     <header>
       <!--Navbar-->
-      <nav id="navbar" class="fixed bg-gray-200/50 dark:dark:bg-neutral-700/50 backdrop-blur inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
+      <nav id="navbar" class="fixed bg-gray-200/50 backdrop-blur inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
         <a href="#">
           <div class="flex items-center flex-shrink-0 text-pink-800 mr-6">
             <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
@@ -67,12 +25,12 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
           </div>
         </a>
         <div id="hamburger" class="block md:hidden">
-          <button class="flex items-center px-3 py-2 border border-black dark:border-white dark:text-white rounded hover:text-pink-800 hover:border-pink-800">
+          <button class="flex items-center px-3 py-2 border border-black rounded hover:text-pink-800 hover:border-pink-800">
             <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
           </button>
         </div>
         <div id="content" class="w-full hidden transition-all ease-in-out md:flex md:items-center md:w-auto">
-          <div class="text-sm dark:text-white md:flex-grow">
+          <div class="text-sm md:flex-grow">
             <a href="#school" class="block mt-4 md:inline-block md:mt-0 hover:text-yellow-500 mr-4">About</a>
             <a href="#skills" class="block mt-4 md:inline-block md:mt-0 hover:text-yellow-500 mr-4">Skills</a>
             <a href="#projects" class="block mt-4 md:inline-block md:mt-0 hover:text-yellow-500 mr-4">Projects</a>
@@ -111,31 +69,31 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
             <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
           </div>
           <!--Content-->
-          <div id="school" class="bg-gray-100 dark:bg-black rounded-tl-lg rounded-tr-lg">
+          <div id="school" class="bg-gray-100 rounded-tl-lg rounded-tr-lg">
               <div class="text-center">
                 <!--School-->
-                <div class="bg-white dark:bg-neutral-900 rounded-xl p-10 m-5 shadow-sm">
+                <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
                 <!--School img-->
                 <img class="w-60 h-60 rounded-full border-solid border border-black mx-auto shadow-lg" src="images/School.svg" alt="School glyph" width="300">
-                <h1 class="dark:text-white text-3xl font-bold pt-10">Wayne State University</h1>
+                <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
                 <!--About Me-->
-                <p class="dark:text-white mb-5">Bachelor of Science in Computer Science</p>
+                <p class="mb-5">Bachelor of Science in Computer Science</p>
                 <!--About me Tabs-->
                 <!--Links-->
-                <div class="tabs mb-10 dark:text-white">
+                <div class="tabs mb-10">
                   <button class="tablinks" onclick="aboutSec(event, 'About')" id="default"><p class="text-3xl font-bold p-5">About</p></button>
                   <button class="tablinks" onclick="aboutSec(event, 'Interests')"><p class="text-3xl font-bold p-5">Interests</p></button>
                   <button class="tablinks" onclick="aboutSec(event, 'Hobbies')"><p class="text-3xl font-bold p-5">Hobbies</p></button>
                 </div>
                 <!--Content-->
                 <div id="About" class="tabcontent">
-                  <p class="dark:text-white mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a rising senior at Wayne State University pursuing 
+                  <p class="mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a rising senior at Wayne State University pursuing 
                     my bachelors in Computer Science. After I graduate I hope to work in computer software engineering, helping in machine learning,
                     full stack development or UI/UX design.
                   </p>
                 </div>
                 <div id="Interests" class="tabcontent">
-                  <p class="dark:text-white mb-20 md:px-10">I've always had an interest in how and why stuff just seems to work.
+                  <p class="mb-20 md:px-10">I've always had an interest in how and why stuff just seems to work.
                     When I was younger I would always look up at the stars in amazement at whats out there. Constantly
                     learning about deep space and the mysteries thats out there. 
                     Nowawdays I'm more focused on the mind and it's interpretation of reality and the parallels it has with the technology
@@ -148,7 +106,7 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
                   </p>
                 </div>
                 <div id="Hobbies" class="tabcontent">
-                  <p class="dark:text-white mb-20 md:px-10">When I get an idea to do something, I start it immediately; The research, planning and developing
+                  <p class="mb-20 md:px-10">When I get an idea to do something, I start it immediately; The research, planning and developing
                     Sometimes in the midst of that excitement I end up taking a lot longer to finish the project or focusing on something else
                     something else that catches my interests. I also like watching educational youtubers like Veritasium or Vsauce
                     The way they're able to explain advanced concepts in an interactive and relatable way reinforces my love for learning.
@@ -158,7 +116,7 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
               </div>
               <!--Skills-->
               <h1 id="skills" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Skills</h1>
-              <div class="bg-white dark:bg-neutral-900 text-black dark:text-white rounded-xl p-10 m-5 shadow-sm">
+              <div class="bg-white text-black rounded-xl p-10 m-5 shadow-sm">
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                   <!--HTML-->
                   <div class="mb-5">
@@ -204,7 +162,7 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
               </div>
               <!--Projects-->
               <h1 id="projects" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
-              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
                 <div class="mb-10">
                   <!--Projects in figma-->
                   <p class="p-5 text-2xl font-semibold">Figma</p>
@@ -322,15 +280,15 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
               </div>
               <!--Work Experience-->
               <h1 id="experience" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Work Experience</h1>
-              <div class="bg-white dark:bg-neutral-900 text-black dark:text-white rounded-lg p-10 m-5 shadow-sm">
+              <div class="bg-white text-black rounded-lg p-10 m-5 shadow-sm">
                 <!--Tab Overlay-->
                 <!--Allstate (Overlay)-->
                 <div id="overlay1" class="backdrop-blur-sm" onclick="off1()">
-                  <div id="format" class="bg-white dark:bg-neutral-900 m-5 md:m-40 p-10 rounded-lg">
+                  <div id="format" class="bg-white m-5 md:m-40 p-10 rounded-lg">
                     <div class="p-10">
                       <img class="rounded-full border border-black mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
                     </div>
-                    <div class="text-black dark:text-white text-lg pt-5">
+                    <div class="text-black text-lg pt-5">
                       <p class="p-2">Building full stack programs using React, javascript/typescript (frontend) and Java, Spring boot, JUnit (backend)</p>
                       <p class="p-2">Partook in the launch of a new customer facing product launch that has been in development for over a year</p>
                       <p class="p-2">Helped start up another internal product with other interns with the assistance of senior developers</p>
@@ -341,11 +299,11 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
                 </div>
                 <!--Apple (Overlay)-->
                 <div id="overlay2" class="backdrop-blur-sm" onclick="off2()">
-                  <div id="format" class="bg-white dark:bg-neutral-900 m-5 md:m-40 p-10 rounded-lg">
+                  <div id="format" class="bg-white m-5 md:m-40 p-10 rounded-lg">
                     <div class="p-10">
                       <img class="rounded-full border border-black mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
                     </div>
-                    <div class="text-black dark:text-white text-lg pt-5">
+                    <div class="text-black text-lg pt-5">
                       <p class="p-2">Highly skilled at uncovering customers' needs, then following through with enlightening solutions</p>
                       <p class="p-2">Maintaining visual merchandising and assisting team members</p>
                       <p class="p-2">Ready to apply my learning in customer interactions</p>
@@ -354,7 +312,7 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
                 </div>
                 <!--Postogon (Overlay)-->
                 <div id="overlay3" class="backdrop-blur-sm" onclick="off3()">
-                  <div id="format" class="bg-white dark:bg-neutral-900 m-5 md:m-40 p-10 rounded-lg">
+                  <div id="format" class="bg-white m-5 md:m-40 p-10 rounded-lg">
                     <div class="p-10">
                       <div class="w-40 h-40 rounded-full border border-black bg-white mx-auto">
                         <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
@@ -362,14 +320,14 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
                         </svg>
                       </div>
                     </div>
-                    <div class="text-black dark:text-white text-lg pt-5">
+                    <div class="text-black text-lg pt-5">
                       <p class="p-2">Follow agile methodology to develop and test new features</p>
                       <p class="p-2">Utilize Figma to storyboard visualizations for front end development</p>
                       <p class="p-2">Create documentation to streamline development</p>
                     </div>
                   </div>
                 </div>
-                <div class="dark:text-white grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
                   <!--Allstate-->
                   <button onclick="on1()">
                     <div class="hover:text-yellow-500">
@@ -404,7 +362,7 @@ GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG
               <!--Footer-->
               <footer>
                 <h1 class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
-                <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
                   <div class="p-4">
                     <div class="flex flex-row justify-center">
                       <a href="https://www.linkedin.com/in/oke-oghene-amuwha-1b1489203/" target="_blank">
