--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./dist/output.css" rel="stylesheet"> <!--Tailwind-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!--Animate.css (future use)-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="Stylesheet" href="styles.css">
+    <!-- <link rel="Stylesheet" href="styles.css"> -->
     <meta charset="UTF-8">
     <title>Oke's Portfolio</title>
     <link rel="icon" href="images/Favicon_Logo.png" type="image/png"> <!--Favicon-->
@@ -17,7 +17,7 @@
     <!--Header-->
     <header>
       <!--Navbar-->
-      <nav id="navbar" class="bg-gray-200/50 dark:bg-gray-800/50 backdrop-blur fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
+      <nav id="navbar" class="bg-gray-200/50 backdrop-blur transition top-150 fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
         <a href="#">
           <div class="text-pink-800 flex items-center flex-shrink-0 mr-6">
             <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
@@ -25,12 +25,12 @@
           </div>
         </a>
         <div id="hamburger" class="block md:hidden">
-          <button class="border border-black dark:border-white dark:text-white hover:text-pink-800 hover:border-pink-800 flex items-center px-3 py-2 rounded">
+          <button class="border border-black hover:text-pink-800 hover:border-pink-800 flex items-center px-3 py-2 rounded">
             <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
           </button>
         </div>
         <div id="content" class="w-full hidden transition-all ease-in-out md:flex md:items-center md:w-auto">
-          <div class="text-sm dark:text-white md:flex-grow">
+          <div class="text-sm md:flex-grow">
             <a href="#school" class="hover:text-yellow-500 block mt-4 md:inline-block mr-4 md:mt-0">About</a>
             <a href="#skills" class="hover:text-yellow-500 block mt-4 md:inline-block mr-4 md:mt-0">Skills</a>
             <a href="#projects" class=" hover:text-yellow-500 block mt-4 md:inline-block md:mt-0 mr-4">Projects</a>
@@ -69,31 +69,31 @@
             <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
           </div>
           <!--Content-->
-          <div id="school" class="bg-gray-100 dark:bg-black rounded-tl-lg rounded-tr-lg">
+          <div id="school" class="bg-gray-100 rounded-tl-lg rounded-tr-lg">
               <div class="text-center">
                 <!--School-->
-                <div class="bg-white dark:bg-neutral-900 rounded-xl p-10 m-5 shadow-sm">
+                <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
                 <!--School img-->
                 <img class="w-60 h-60 rounded-full border-solid border border-black mx-auto shadow-lg" src="images/School.svg" alt="School glyph" width="300">
-                <h1 class="dark:text-white text-3xl font-bold pt-10">Wayne State University</h1>
+                <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
                 <!--About Me-->
-                <p class="dark:text-white mb-5">Bachelor of Science in Computer Science</p>
+                <p class="mb-5">Bachelor of Science in Computer Science</p>
                 <!--About me Tabs-->
                 <!--Links-->
-                <div class="tabs mb-10 dark:text-white">
-                  <button class="tablinks" onclick="aboutSec(event, 'About')" id="default"><p class="text-3xl font-bold p-5">About</p></button>
-                  <button class="tablinks" onclick="aboutSec(event, 'Interests')"><p class="text-3xl font-bold p-5">Interests</p></button>
-                  <button class="tablinks" onclick="aboutSec(event, 'Hobbies')"><p class="text-3xl font-bold p-5">Hobbies</p></button>
+                <div class="tabs overflow-hidden mb-10">
+                  <button class="tablinks" onclick="aboutSec(event, 'About')" id="default"><p class="active:text-pink-800 hover:text-yellow-500 transition text-3xl font-bold p-5">About</p></button>
+                  <button class="tablinks" onclick="aboutSec(event, 'Interests')"><p class="active:text-pink-800 hover:text-yellow-500 transition text-3xl font-bold p-5">Interests</p></button>
+                  <button class="tablinks" onclick="aboutSec(event, 'Hobbies')"><p class="active:text-pink-800 hover:text-yellow-500 transition text-3xl font-bold p-5">Hobbies</p></button>
                 </div>
                 <!--Content-->
                 <div id="About" class="tabcontent"> 
-                  <p class="dark:text-white mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a senior at Wayne State University pursuing 
+                  <p class="mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a senior at Wayne State University pursuing 
                     my bachelors in Computer Science. After I graduate I hope to work in computer software engineering, helping in machine learning,
                     full stack development or UI/UX design.
                   </p>
                 </div>
                 <div id="Interests" class="tabcontent">
-                  <p class="dark:text-white mb-20 md:px-10">I've always had an interest in how and why stuff just seems to work.
+                  <p class="mb-20 md:px-10">I've always had an interest in how and why stuff just seems to work.
                     When I was younger I would always look up at the stars in amazement at whats out there. Constantly
                     learning about deep space and the mysteries thats out there. 
                     Nowawdays I'm more focused on the mind and it's interpretation of reality and the parallels it has with the technology
@@ -106,7 +106,7 @@
                   </p>
                 </div>
                 <div id="Hobbies" class="tabcontent">
-                  <p class="dark:text-white mb-20 md:px-10">When I get an idea to do something, I start it immediately; The research, planning and developing
+                  <p class="mb-20 md:px-10">When I get an idea to do something, I start it immediately; The research, planning and developing
                     Sometimes in the midst of that excitement I end up taking a lot longer to finish the project or focusing on something else
                     something else that catches my interests. I also like watching educational youtubers like Veritasium or Vsauce
                     The way they're able to explain advanced concepts in an interactive and relatable way reinforces my love for learning.
@@ -116,7 +116,7 @@
               </div>
               <!--Skills-->
               <h1 id="skills" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Skills</h1>
-              <div class="bg-white dark:bg-neutral-900 text-black dark:text-white rounded-xl p-10 m-5 shadow-sm">
+              <div class="bg-white text-black  rounded-xl p-10 m-5 shadow-sm">
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                   <!--HTML-->
                   <div class="mb-5">
@@ -162,8 +162,8 @@
               </div>
               <!--Projects-->
               <h1 id="projects" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
-              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2 md:grid-cols-1">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2">
                   <!-- Left container -->
                   <div class="p-10">
                     <h1 class="text-pink-800 text-2xl text-left font-bold">Playlist Covers</h1>
@@ -177,8 +177,8 @@
                   </div>
                 </div>
               </div>
-              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2 md:grid-cols-1">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2">
                   <!-- Left container -->
                   <div class="p-10">
                     <h1 class="text-pink-800 text-2xl text-left font-bold">Live Waveform</h1>
@@ -192,8 +192,8 @@
                   </div>
                 </div>
               </div>
-              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2 md:grid-cols-1">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2">
                   <!-- Left container -->
                   <div class="p-10">
                     <h1 class="text-pink-800 text-2xl text-left font-bold">Spotify Mockup</h1>
@@ -210,8 +210,8 @@
               <!-- End Projects -->
               <!--Work Experience-->
               <h1 id="experience" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Work Experience</h1>
-              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2 md:grid-cols-1">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2">
                   <!-- Left container -->
                   <div class="p-10">
                     <h1 class="text-pink-800 text-2xl text-left font-bold">Allstate</h1>
@@ -238,8 +238,8 @@
                   </div>
                 </div>
               </div>
-              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2 md:grid-cols-1">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2">
                   <!-- Left container -->
                   <div class="p-10">
                     <h1 class="text-pink-800 text-2xl text-left font-bold">Apple</h1>
@@ -260,8 +260,8 @@
                   </div>
                 </div>
               </div>
-              <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2 md:grid-cols-1">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-2">
                   <!-- Left container -->
                   <div class="p-10">
                     <h1 class="text-pink-800 text-2xl text-left font-bold">Postogon</h1>
@@ -289,23 +289,23 @@
               <!--Footer-->
               <footer>
                 <h1 class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
-                <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-5 m-5 shadow-sm">
+                <div class="bg-white rounded-xl p-5 m-5 shadow-sm">
                   <div class="p-4">
                     <div class="flex flex-row justify-center">
                       <a href="https://www.linkedin.com/in/oke-oghene-amuwha-1b1489203/" target="_blank">
-                        <div class="m-2 md:m-5 hover:text-yellow-500">
+                        <div class="m-2 md:m-5 hover:text-yellow-500 transition">
                           <img class="rounded-full mx-auto border border-black" src="images/LinkedIn.svg" alt="Linkedin" width="50">
                           <p class="pt-2 text-sm">LinkedIn</p>
                         </div>
                       </a>
                       <a href="mailto: amuwhao46@gmail.com">
-                        <div class="m-2 md:m-5 hover:text-yellow-500">
+                        <div class="m-2 md:m-5 hover:text-yellow-500 transition">
                           <img class="rounded-full mx-auto border border-black" src="images/Mail.svg" alt="Mail" width="50">
                           <p class="pt-2 text-sm">Mail</p>
                         </div>
                       </a>
                       <a href="https://github.com/amuwhao46" target="_blank">
-                      <div class="m-2 md:m-5 hover:text-yellow-500">
+                      <div class="m-2 md:m-5 hover:text-yellow-500 transition">
                         <img class="rounded-full mx-auto border border-black" src="images/Github.svg" alt="Github" width="50">
                         <p class="pt-2 text-sm">Github</p>
                       </div>
@@ -372,36 +372,12 @@
         }
         tablinks = document.getElementsByClassName("tablinks");
         for (i = 0; i < tablinks.length; i++) {
-          tablinks[i].className = tablinks[i].className.replace(" active", "");
+          tablinks[i].className = tablinks[i].className.replace("active", "");
         }
         document.getElementById(tabType).style.display = "block";
-        evt.currentTarget.className += " active";
+        evt.currentTarget.className += "active";
         }
         document.getElementById("default").click(); /*Opens by default*/
-      </script>
-      <script>
-        /*Tab Overlay*/
-        function on1() {
-          document.getElementById("overlay1").style.display = "block";
-        }
-
-        function off1() {
-          document.getElementById("overlay1").style.display = "none";
-        }
-        function on2() {
-          document.getElementById("overlay2").style.display = "block";
-        }
-
-        function off2() {
-          document.getElementById("overlay2").style.display = "none";
-        }
-        function on3() {
-          document.getElementById("overlay3").style.display = "block";
-        }
-
-        function off3() {
-          document.getElementById("overlay3").style.display = "none";
-        }
       </script>
   </body>
 </html>
