--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./dist/output.css" rel="stylesheet"> <!--Tailwind-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!--Animate.css (future use)-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="Stylesheet" href="styles.css"> -->
+    <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Oke's Portfolio</title>
     <link rel="icon" href="images/Favicon_Logo.png" type="image/png"> <!--Favicon-->
@@ -17,7 +17,7 @@
     <!--Header-->
     <header>
       <!--Navbar-->
-      <nav id="navbar" class="bg-gray-200/50 backdrop-blur transition top-150 fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
+      <nav id="navbar" class="bg-gray-200/50 backdrop-blur fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
         <a href="#">
           <div class="text-pink-800 flex items-center flex-shrink-0 mr-6">
             <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
@@ -31,13 +31,13 @@
         </div>
         <div id="content" class="w-full hidden transition-all ease-in-out md:flex md:items-center md:w-auto">
           <div class="text-sm md:flex-grow">
-            <a href="#school" class="hover:text-yellow-500 block mt-4 md:inline-block mr-4 md:mt-0">About</a>
-            <a href="#skills" class="hover:text-yellow-500 block mt-4 md:inline-block mr-4 md:mt-0">Skills</a>
-            <a href="#projects" class=" hover:text-yellow-500 block mt-4 md:inline-block md:mt-0 mr-4">Projects</a>
-            <a href="#experience" class="hover:text-yellow-500 block mt-4 md:inline-block md:mt-0 mr-4">Experience</a>
+            <a href="#school" class="hover:text-yellow-500 transition block mt-4 md:inline-block mr-4 md:mt-0">About</a>
+            <a href="#skills" class="hover:text-yellow-500 transition block mt-4 md:inline-block mr-4 md:mt-0">Skills</a>
+            <a href="#projects" class=" hover:text-yellow-500 transition block mt-4 md:inline-block md:mt-0 mr-4">Projects</a>
+            <a href="#experience" class="hover:text-yellow-500 transition block mt-4 md:inline-block md:mt-0 mr-4">Experience</a>
           </div>
           <div>
-            <a href="files/Oke-Oghene_Amuwha_Resume.pdf" target="_blank" class="inline-block text-sm px-4 py-2 leading-none border rounded text-yellow-500 border-yellow-500 hover:border-transparent hover:text-white hover:bg-pink-800 mt-4 md:mt-0">
+            <a href="files/Oke-Oghene_Amuwha_Resume.pdf" target="_blank" class="text-yellow-500 border-yellow-500 hover:text-white hover:bg-pink-800 transition inline-block text-sm px-4 py-2 leading-none border rounded hover:border-transparent mt-4 md:mt-0">
               Resume
             </a>
           </div>
@@ -80,10 +80,10 @@
                 <p class="mb-5">Bachelor of Science in Computer Science</p>
                 <!--About me Tabs-->
                 <!--Links-->
-                <div class="tabs overflow-hidden mb-10">
-                  <button class="tablinks" onclick="aboutSec(event, 'About')" id="default"><p class="active:text-pink-800 hover:text-yellow-500 transition text-3xl font-bold p-5">About</p></button>
-                  <button class="tablinks" onclick="aboutSec(event, 'Interests')"><p class="active:text-pink-800 hover:text-yellow-500 transition text-3xl font-bold p-5">Interests</p></button>
-                  <button class="tablinks" onclick="aboutSec(event, 'Hobbies')"><p class="active:text-pink-800 hover:text-yellow-500 transition text-3xl font-bold p-5">Hobbies</p></button>
+                <div class="tabs  mb-10">
+                  <button class="tablinks" onclick="aboutSec(event, 'About')" id="default"><p class="hover:text-yellow-500 transition text-3xl font-bold p-5">About</p></button>
+                  <button class="tablinks" onclick="aboutSec(event, 'Interests')"><p class="hover:text-yellow-500 transition text-3xl font-bold p-5">Interests</p></button>
+                  <button class="tablinks" onclick="aboutSec(event, 'Hobbies')"><p class="hover:text-yellow-500 transition text-3xl font-bold p-5">Hobbies</p></button>
                 </div>
                 <!--Content-->
                 <div id="About" class="tabcontent"> 
@@ -321,9 +321,6 @@
         </div>
       </main>
     </div>
-    <!--React stuff-->
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <!--Javascript Navbar-->
     <script>
       /*Show navbar on scroll*/
@@ -372,10 +369,10 @@
         }
         tablinks = document.getElementsByClassName("tablinks");
         for (i = 0; i < tablinks.length; i++) {
-          tablinks[i].className = tablinks[i].className.replace("active", "");
+          tablinks[i].className = tablinks[i].className.replace(" active", "");
         }
         document.getElementById(tabType).style.display = "block";
-        evt.currentTarget.className += "active";
+        evt.currentTarget.className += " active";
         }
         document.getElementById("default").click(); /*Opens by default*/
       </script>
