--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
       </nav>
     </header>
+    <!--Wallpaper-->
     <div class="bg-fixed bg-no-repeat bg-center bg-cover" style="background-image: url(images/Background.jpg)">
       <!--Dark mode button-->
       <!-- <div class="flex justify-end items-center space-x-2">
@@ -65,7 +66,7 @@
           <img class="w-80 h-80 rounded-full mx-auto" src="images/Portrait.jpg" alt="Profile Picture" width="500">
           <div class="mx-auto pb-20 text-white text-center">
             <p class="text-5xl font-bold pt-5">Oke-Oghene Amuwha</p>
-            <p class="text-lg px-10 my-5">Lay on the grass, look up at the clouds, and ponder my existence</p>
+            <p class="text-lg px-10 my-5">Dynamic websites are the way to go</p>
             <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
           </div>
           <!--Content-->
@@ -88,7 +89,7 @@
                 <!--Content-->
                 <div id="About" class="tabcontent"> 
                   <p class="mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a senior at Wayne State University pursuing 
-                    my bachelors in Computer Science. After I graduate I hope to work in computer software engineering, helping in machine learning,
+                    my bachelors in Computer Science. After I graduate I hope to work in software engineering, specifically in machine learning,
                     full stack development or UI/UX design.
                   </p>
                 </div>
@@ -100,7 +101,7 @@
                     we interface with. How is it that a certain vibration of particles makes the mind interpret it as music?
                     Likewise, how does tapping a certain part of my phone display cause the flashlight to light up?
                     I believe we will have, at the very least, the beginnings of an understanding of the hard problem of consciousness.
-                    And I want to be a part of that discovery, either contributing my own observations and measurements or indirectly
+                    I want to be a part of that discovery, either contributing my own observations and measurements or indirectly
                     through my field of study. Either way it's amazing how interconnected a lot of things seem to be, even with this 
                     delicate balance it all just works.
                   </p>
@@ -162,129 +163,151 @@
               </div>
               <!--Projects-->
               <h1 id="projects" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
+              <!-- Live Waveform -->
               <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2">
+                <div class="grid grid-cols-1 md:grid-cols-2">
                   <!-- Left container -->
-                  <div class="p-10">
-                    <h1 class="text-pink-800 text-2xl text-left font-bold">Playlist Covers</h1>
-                    <p class="text-left text-lg mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                      Volutpat mollis egestas libero nullam vitae arcu. Donec posuere fermentum, 
-                      sed neque risus, non. Amet, at lectus vestibulum eleifend. Sed ornare.</p>
+                  <div class="p-10 md:text-left">
+                    <h1 class="text-pink-800 text-2xl font-bold">Live Waveform</h1>
+                    <p class="text-lg mt-10">
+                      Trying to implement Spotify's API to show a live waveform of the current song being played.
+                      The webpage dynamically switches the album cover, Song name, and artist name. The background and the "light shapes"
+                      also move with the beat of the current song
+                    </p>
+                    <p class="text-lg mt-2">
+                      This project uses react and Spotify's to work. It is still a work in progress because I'm currently teaching myself react and API 
+                      requests and responses
+                    </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end pr-10">
-                    <img src="images/PlaylistCover.png" alt="Playlist designs from figma" width="250">
-                  </div>
-                </div>
-              </div>
-              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2">
-                  <!-- Left container -->
-                  <div class="p-10">
-                    <h1 class="text-pink-800 text-2xl text-left font-bold">Live Waveform</h1>
-                    <p class="text-left text-lg mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                      Volutpat mollis egestas libero nullam vitae arcu. Donec posuere fermentum, 
-                      sed neque risus, non. Amet, at lectus vestibulum eleifend. Sed ornare.</p>
-                  </div>
-                  <!-- Right container -->
-                  <div class="flex justify-end pr-10">
+                  <div class="flex justify-end mx-auto">
                     <img src="images/LiveWaveform.png" alt="Mockup of future project using Spotify" width="250">
                   </div>
                 </div>
               </div>
+              <!-- End Live Waveform -->
+              <!-- Playlist Covers -->
               <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2">
+                <div class="grid grid-cols-1 md:grid-cols-2">
                   <!-- Left container -->
-                  <div class="p-10">
-                    <h1 class="text-pink-800 text-2xl text-left font-bold">Spotify Mockup</h1>
-                    <p class="text-left text-lg mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                      Volutpat mollis egestas libero nullam vitae arcu. Donec posuere fermentum, 
-                      sed neque risus, non. Amet, at lectus vestibulum eleifend. Sed ornare.</p>
+                  <div class="p-10 md:text-left">
+                    <h1 class="text-pink-800 text-2xl font-bold">Playlist Covers</h1>
+                    <p class="text-lg mt-10">
+                      To familiarize myself with Figma, a UI/UX design tool, I made custom playlist cover arts to reflect the mood
+                      the songs in each playlist conveys. I played around with different techniques and styles to see how far I could take Figma's 
+                      tools
+                    </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end pr-10">
+                  <div class="flex justify-end mx-auto">
+                    <img src="images/PlaylistCover.png" alt="Playlist designs from figma" width="250">
+                  </div>
+                </div>
+              </div>
+              <!-- End Playlist Covers -->
+              <!-- Spotify Mockup -->
+              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="grid grid-cols-1 md:grid-cols-2">
+                  <!-- Left container -->
+                  <div class="p-10 md:text-left">
+                    <a href="https://www.figma.com/file/5NJoulTAhCrqaZjrRIw6ju/Song-control?node-id=0%3A1" target="_blank">
+                      <h1 class="text-pink-800 hover:text-yellow-500 transition text-2xl font-bold">Spotify Mockup</h1>
+                    </a>
+                      <p class="text-lg mt-10">
+                        In this Figma project, I made a custom music player, inspired by Spotify, to play around with their prototyping tool.
+                        The prototyping tool allows for dynamic designs, letting you see how the different elements interact with each other. 
+                        Currently I haven't thought of implementing this into a usable product                   
+                      </p>
+                  </div>
+                  <!-- Right container -->
+                  <div class="flex justify-end mx-auto">
                     <img src="images/SpotifyMock.png" alt="Spotify mock design from Figma" width="500">
                   </div>
                 </div>
               </div>
+              <!-- End Spotify Mockup -->
               <!-- End Projects -->
               <!--Work Experience-->
               <h1 id="experience" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Work Experience</h1>
+              <!-- Allstate -->
               <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2">
+                <div class="grid grid-cols-1 md:grid-cols-2">
                   <!-- Left container -->
-                  <div class="p-10">
-                    <h1 class="text-pink-800 text-2xl text-left font-bold">Allstate</h1>
-                    <p class="text-left text-lg mt-10">
+                  <div class="p-10 md:text-left">
+                    <h1 class="text-pink-800 text-2xl font-bold">Allstate</h1>
+                    <p class="text-lg mt-10">
                       Building full stack programs using React, 
                       javascript/typescript (frontend) and Java, Spring boot, JUnit (backend)
                     </p>
-                    <p class="text-left text-lg mt-2">
+                    <p class="text-lg mt-2">
                       Partook in the launch of a new customer facing product launch that has been in development for over a year
                     </p>
-                    <p class="text-left text-lg mt-2">
+                    <p class="text-lg mt-2">
                       Helped start up another internal product with other interns with the assistance of senior developers
                     </p>
-                    <p class="text-left text-lg mt-2">
+                    <p class="text-lg mt-2">
                       Paired programming and test driven development
                     </p>
-                    <p class="text-left text-lg mt-2">
+                    <p class="text-lg mt-2">
                       Utilized terminal to perform git commands
                     </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end pr-10">
+                  <div class="flex justify-end mx-auto">
                     <img src="images/Allstate.svg" alt="Image of the Allstate logo" width="250">
                   </div>
                 </div>
               </div>
+              <!-- End Allstate -->
+              <!-- Apple -->
               <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2">
+                <div class="grid grid-cols-1 md:grid-cols-2">
                   <!-- Left container -->
-                  <div class="p-10">
-                    <h1 class="text-pink-800 text-2xl text-left font-bold">Apple</h1>
-                    <p class="text-left text-lg mt-10">
+                  <div class="p-10 md:text-left">
+                    <h1 class="text-pink-800 text-2xl font-bold">Apple</h1>
+                    <p class="text-lg mt-10">
                       Highly skilled at uncovering customers' needs, 
                       then following through with enlightening solutions
                     </p>
-                    <p class="text-left text-lg mt-2">
+                    <p class="text-lg mt-2">
                       Maintaining visual merchandising and assisting team members
                     </p>
-                    <p class="text-left text-lg mt-2">
+                    <p class="text-lg mt-2">
                       Ready to apply my learning in customer interactions
                     </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end pr-10">
+                  <div class="flex justify-end mx-auto">
                     <img src="images/Apple.svg" alt="Image of the Apple logo" width="250">
                   </div>
                 </div>
               </div>
+              <!-- End Apple -->
+              <!-- Postogon -->
               <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-2">
+                <div class="grid grid-cols-1 md:grid-cols-2">
                   <!-- Left container -->
-                  <div class="p-10">
-                    <h1 class="text-pink-800 text-2xl text-left font-bold">Postogon</h1>
-                    <p class="text-left text-lg mt-10">
+                  <div class="p-10 md:text-left">
+                    <h1 class="text-pink-800 text-2xl font-bold">Postogon</h1>
+                    <p class="text-lg mt-10">
                       Follow agile methodology to develop and test new features
                     </p>
-                    <p class="text-left text-lg mt-2">
+                    <p class="text-lg mt-2">
                       Utilize Figma to storyboard visualizations for front end development
                     </p>
-                    <p class="text-left text-lg mt-2">
+                    <p class="text-lg mt-2">
                       Create documentation to streamline development
                     </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end pr-10">
+                  <div class="flex justify-end mx-auto">
                     <div class="w-250 rounded-full bg-white">
-                      <svg aria-label="Home" class="" id="logo" width="250" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
-                      <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
-                      </svg>
+                      <img src="images/Postogon.png" alt="Image of the Postogon Logo" width="250">
                     </div>
                   </div>
                 </div>
               </div>
+              <!-- End Postogon -->
               <!-- End Work Experience -->
               <!--Footer-->
               <footer>
