Added additional links and updated pictures

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <a href="#skills" class="hover:text-yellow-500 transition block mt-4 md:inline-block mr-4 md:mt-0">Skills</a>
             <a href="#projects" class=" hover:text-yellow-500 transition block mt-4 md:inline-block md:mt-0 mr-4">Projects</a>
             <a href="#experience" class="hover:text-yellow-500 transition block mt-4 md:inline-block md:mt-0 mr-4">Experience</a>
+            <a href="#contacts" class="hover:text-yellow-500 transition block mt-4 md:inline-block md:mt-0 mr-4">Contact</a>
           </div>
           <div>
             <a href="files/Oke-Oghene_Amuwha_Resume.pdf" target="_blank" class="text-yellow-500 border-yellow-500 hover:text-white hover:bg-pink-800 transition inline-block text-sm px-4 py-2 leading-none border rounded hover:border-transparent mt-4 md:mt-0">
@@ -172,7 +173,9 @@
                 <div class="grid grid-cols-1 md:grid-cols-2">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
-                    <h1 class="text-pink-800 text-2xl font-bold">Live Waveform</h1>
+                    <a href="https://github.com/amuwhao46/nowplaying" target="_blank">
+                      <h1 class="text-pink-800 hover:text-yellow-500 transition text-2xl font-bold">Live Waveform</h1>
+                    </a>
                     <p class="text-lg mt-10">
                       Trying to implement Spotify's API to show a live waveform of the current song being played.
                       The webpage dynamically switches the album cover, Song name, and artist name. The background and the "light shapes"
@@ -196,7 +199,9 @@
                 <div class="grid grid-cols-1 md:grid-cols-2">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
-                    <h1 class="text-pink-800 text-2xl font-bold">Playlist Covers</h1>
+                    <a href="https://www.figma.com/file/wbxXLggR5uTiDMxChygNsr/Playlist-Cover?node-id=0%3A1" target="_blank">
+                      <h1 class="text-pink-800 hover:text-yellow-500 transition text-2xl font-bold">Playlist Covers</h1>
+                    </a>
                     <p class="text-lg mt-10">
                       To familiarize myself with Figma, a UI/UX design tool, I made custom playlist cover arts to reflect the mood
                       the songs in each playlist conveys. I played around with different techniques and styles to see how far I could take Figma's 
@@ -318,7 +323,7 @@
               <!-- End Work Experience -->
               <!--Footer-->
               <footer>
-                <h1 class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
+                <h1 id="contacts" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
                 <div class="bg-white rounded-xl p-5 m-5 shadow-sm">
                   <div class="p-4">
                     <div class="flex flex-row justify-center">
