--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!--Website by Oke-Oghene Amuwha-->
-<html>
+<html class="scroll-smooth">
   <head>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
     <link href="./dist/output.css" rel="stylesheet"> <!--Tailwind-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!--Animate.css (future use)-->
+    <!-- <link rel="Stylesheet" href="styles.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> Animate.css (future use) -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Oke's Portfolio</title>
     <link rel="icon" href="images/Favicon_Logo.png" type="image/png"> <!--Favicon-->
