Updated how  images in the project section are viewed and relative color scheme

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <!--Navbar-->
       <nav id="navbar" class="fixed bg-gray-200/50 backdrop-blur inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
         <a href="#">
-          <div class="text-pink-800 flex items-center flex-shrink-0 mr-6">
+          <div class="text-fuchsia-700 flex items-center flex-shrink-0 mr-6">
             <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
             <span class="font-bold text-2xl tracking-tight">Oke Amuwha</span>
           </div>
         </a>
         <div id="hamburger" class="block md:hidden">
-          <button class="border border-black hover:text-pink-800 hover:border-pink-800 flex items-center px-3 py-2 rounded">
+          <button class="border border-black hover:text-fuchsia-700 hover:border-fuchsia-700 flex items-center px-3 py-2 rounded">
             <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
           </button>
         </div>
@@ -39,7 +39,7 @@
             <a href="#contacts" class="hover:text-yellow-500 transition block mt-4 md:inline-block md:mt-0 mr-4">Contact</a>
           </div>
           <div>
-            <a href="files/Oke-Oghene_Amuwha_Resume.pdf" target="_blank" class="text-yellow-500 border-yellow-500 hover:text-white hover:bg-pink-800 transition inline-block text-sm px-4 py-2 leading-none border rounded hover:border-transparent mt-4 md:mt-0">
+            <a href="files/Oke-Oghene_Amuwha_Resume.pdf" target="_blank" class="text-fuchsia-700 border-fuchsia-700 hover:text-white hover:bg-yellow-500 transition inline-block text-sm px-4 py-2 leading-none border rounded hover:border-transparent mt-4 md:mt-0">
               Resume
             </a>
           </div>
@@ -118,7 +118,7 @@
                 </div>
               </div>
               <!--Skills-->
-              <h1 id="skills" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Skills</h1>
+              <h1 id="skills" class="text-3xl text-left text-fuchsia-700 font-bold pt-5 ml-10">Skills</h1>
               <div class="bg-white text-black  rounded-xl p-10 m-5 shadow-md">
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                   <!--HTML-->
@@ -164,15 +164,14 @@
                 </div>
               </div>
               <!--Projects-->
-              <h1 id="projects" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
-
+              <h1 id="projects" class="text-fuchsia-700 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
               <!-- Live Waveform -->
               <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                 <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
                     <a href="https://github.com/amuwhao46/nowplaying" target="_blank">
-                      <h1 class="text-pink-800 hover:text-yellow-500 transition text-2xl font-bold">Live Waveform</h1>
+                      <h1 class="text-fuchsia-700 hover:text-yellow-500 transition text-2xl font-bold">Live Waveform</h1>
                     </a>
                     <p class="text-lg mt-10">
                       Trying to implement Spotify's API to show a live waveform of the current song being played.
@@ -182,21 +181,22 @@
                     <p class="text-lg mt-2">
                       This project uses react and Spotify's to work. It is still a work in progress because I'm currently teaching myself react and API 
                       requests and responses
-
                     </p>
                   </div>
                   <!-- Right container -->
-                    <img class="mx-auto md:rounded-none w-30" src="images/LiveWaveform.png" alt="Mockup of future project using Spotify" width="250">
+                  <div class="">
+                    <img class="mx-auto rounded-lg" src="images/LiveWaveform.png" alt="Mockup of future project using Spotify" width="550">
+                  </div>
                 </div>
               </div>
               <!-- End Live Waveform -->
               <!-- Playlist Covers -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+              <div class="bg-white rounded-xl p-10 md:p-0  m-5 shadow-md">
                 <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
                     <a href="https://www.figma.com/file/wbxXLggR5uTiDMxChygNsr/Playlist-Cover?node-id=0%3A1" target="_blank">
-                      <h1 class="text-pink-800 hover:text-yellow-500 transition text-2xl font-bold">Playlist Covers</h1>
+                      <h1 class="text-fuchsia-700 hover:text-yellow-500 transition text-2xl font-bold">Playlist Covers</h1>
                     </a>
                     <p class="text-lg mt-10">
                       To familiarize myself with Figma, a UI/UX design tool, I made custom playlist cover arts to reflect the mood
@@ -206,18 +206,18 @@
                   </div>
                   <!-- Right container -->
                   <div class="">
-                    <img class="mx-auto" src="images/PlaylistCover.png" alt="Playlist designs from figma" width="250">
+                    <img class="mx-auto rounded-lg" src="images/PlaylistCover.png" alt="Playlist designs from figma" width="500">
                   </div>
                 </div>
               </div>
               <!-- End Playlist Covers -->
               <!-- Spotify Mockup -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+              <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                 <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
                     <a href="https://www.figma.com/file/5NJoulTAhCrqaZjrRIw6ju/Song-control?node-id=0%3A1" target="_blank">
-                      <h1 class="text-pink-800 hover:text-yellow-500 transition text-2xl font-bold">Spotify Mockup</h1>
+                      <h1 class="text-fuchsia-700 hover:text-yellow-500 transition text-2xl font-bold">Spotify Mockup</h1>
                     </a>
                       <p class="text-lg mt-10">
                         In this Figma project, I made a custom music player, inspired by Spotify, to play around with their prototyping tool.
@@ -227,20 +227,20 @@
                   </div>
                   <!-- Right container -->
                   <div class="">
-                    <img class="mx-auto" src="images/SpotifyMock.png" alt="Spotify mock design from Figma" width="500">
+                    <img class="mx-auto rounded-lg " src="images/SpotifyMock.png" alt="Spotify mock design from Figma" width="1200">
                   </div>
                 </div>
               </div>
               <!-- End Spotify Mockup -->
               <!-- End Projects -->
               <!--Work Experience-->
-              <h1 id="experience" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Work Experience</h1>
+              <h1 id="experience" class="text-3xl text-left text-fuchsia-700 font-bold pt-5 ml-10">Work Experience</h1>
               <!-- Allstate -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+              <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                 <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
-                    <h1 class="text-pink-800 text-2xl font-bold">Allstate</h1>
+                    <h1 class="text-fuchsia-700 text-2xl font-bold">Allstate</h1>
                     <p class="text-lg mt-10">
                       Building full stack programs using React, 
                       javascript/typescript (frontend) and Java, Spring boot, JUnit (backend)
@@ -259,18 +259,18 @@
                     </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end">
+                  <div class="flex">
                     <img class="mx-auto" src="images/Allstate.svg" alt="Image of the Allstate logo" width="250">
                   </div>
                 </div>
               </div>
               <!-- End Allstate -->
               <!-- Apple -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+              <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                 <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
-                    <h1 class="text-pink-800 text-2xl font-bold">Apple</h1>
+                    <h1 class="text-fuchsia-700 text-2xl font-bold">Apple</h1>
                     <p class="text-lg mt-10">
                       Highly skilled at uncovering customers' needs, 
                       then following through with enlightening solutions
@@ -290,11 +290,11 @@
               </div>
               <!-- End Apple -->
               <!-- Postogon -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+              <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                 <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
-                    <h1 class="text-pink-800 text-2xl font-bold">Postogon</h1>
+                    <h1 class="text-fuchsia-700 text-2xl font-bold">Postogon</h1>
                     <p class="text-lg mt-10">
                       Follow agile methodology to develop and test new features
                     </p>
@@ -318,7 +318,7 @@
               <!-- End Work Experience -->
               <!--Footer-->
               <footer>
-                <h1 id="contacts" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
+                <h1 id="contacts" class="text-fuchsia-700 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
                 <div class="bg-white rounded-xl p-5 m-5 shadow-md">
                   <div class="p-4">
                     <div class="flex flex-row justify-center">
