Fixed image format of experience section

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                 <div class="md:flex">
                   <!-- Left container -->
-                  <div class="p-10 md:text-left">
+                  <div class="p-10 md:text-left grow">
                     <h1 class="text-fuchsia-700 text-2xl font-bold">Allstate</h1>
                     <p class="text-lg mt-10">
                       Building full stack programs using React, 
@@ -259,7 +259,7 @@
                     </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex">
+                  <div class="">
                     <img class="mx-auto" src="images/Allstate.svg" alt="Image of the Allstate logo" width="250">
                   </div>
                 </div>
@@ -269,7 +269,7 @@
               <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                 <div class="md:flex">
                   <!-- Left container -->
-                  <div class="p-10 md:text-left">
+                  <div class="p-10 md:text-left grow">
                     <h1 class="text-fuchsia-700 text-2xl font-bold">Apple</h1>
                     <p class="text-lg mt-10">
                       Highly skilled at uncovering customers' needs, 
@@ -293,7 +293,7 @@
               <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                 <div class="md:flex">
                   <!-- Left container -->
-                  <div class="p-10 md:text-left">
+                  <div class="p-10 md:text-left grow">
                     <h1 class="text-fuchsia-700 text-2xl font-bold">Postogon</h1>
                     <p class="text-lg mt-10">
                       Follow agile methodology to develop and test new features
@@ -308,8 +308,7 @@
                   <!-- Right container -->
                   <div class="">
                     <div class="w-250 rounded-full bg-white">
-                      <img class="mx-auto" src="images/Postogon.png" alt="Image of the Postogon Logo" width="250">
-
+                      <img class="mx-auto p-5" src="images/Postogon.png" alt="Image of the Postogon Logo" width="250">
                     </div>
                   </div>
                 </div>
