Minor changes and fixes

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         </p>
                       </div>
                       <!-- Right container -->
-                      <div class="">
+                      <div class="md:m-5">
                         <img class="mx-auto rounded-lg" src="images/SpotifyMock.png" alt="Spotify mock design from Figma" width="700">
                       </div>
                     </div>
